add client + statistics

--- a/templates/_main_menu.html.twig
+++ b/templates/_main_menu.html.twig
@@ -50,6 +50,13 @@
 				</ul>
 			</li>
 
+			<li class="nav-item">
+				<a href="{{ path('statistics') }}" class="nav-link {{ route_name == 'statistics' ? 'active' }} text-white" aria-current="page">
+					<i class="fas fa-chart-bar"></i>
+					Statistics
+				</a>
+			</li>
+
 		</ul>
 		<hr>
 
