--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,8 +24,11 @@
 				})) }}
 			</div>
 
-			<div class="col-md-10"> {% block body %}{% endblock %}
+			<div class="col-md-10">
+				<div class="container">
+					{% block body %}{% endblock %}
 				</div>
 			</div>
-		</body>
-	</html>
+		</div>
+	</body>
+</html>
