--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -8,3 +8,8 @@ $dark: #011d28;
 
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
+
+
+html, body {
+    height: 100%;
+}
