--- a/templates/_main_menu.html.twig
+++ b/templates/_main_menu.html.twig
@@ -49,38 +49,36 @@
 					{% endfor %}
 				</ul>
 			</li>
-
-			<li class="nav-item">
-				<a href="{{ path('statistics') }}" class="nav-link {{ route_name == 'statistics' ? 'active' }} text-white" aria-current="page">
-					<i class="fas fa-chart-bar"></i>
-					Statistics
-				</a>
-			</li>
+			
+			{% if is_granted('ROLE_ADMIN') %}
+				<li class="nav-item">
+					<a href="{{ path('statistics') }}" class="nav-link {{ route_name == 'statistics' ? 'active' }} text-white" aria-current="page">
+						<i class="fas fa-chart-bar"></i>
+						Statistics
+					</a>
+				</li>
+			{% endif %}
 
 		</ul>
 		<hr>
 
+		{% if app.user %}
 
-		{# <div class="dropdown">
+		<div class="dropdown">
 			<a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
 				<img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-				<strong>mdo</strong>
+				<strong>{{ app.user.client.name }}</strong>
 			</a>
 			<ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
 				<li>
-					<a class="dropdown-item" href="#">New project...</a>
-				</li>
-				<li>
-					<a class="dropdown-item" href="#">Settings</a>
-				</li>
-				<li>
-					<a class="dropdown-item" href="#">Profile</a>
-				</li>
-				<li><hr class="dropdown-divider"></li>
-				<li>
-					<a class="dropdown-item" href="#">Sign out</a>
+					<a class="dropdown-item" href="{{ path('app_logout') }}">Se déconnecter</a>
 				</li>
 			</ul>
-		</div> #}
+		</div>
+
+		{% else %}
+			<a href="{{ path('app_login') }}" class="p-3 text-white text-decoration-none">Se connecter</a>
+
+		{% endif %}
 	</div>
 </div>
