--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,8 +15,7 @@
 		{% endblock %}
 	</head>
 	<body>
-
-		<div class="row">
+		<div class="row h-100">
 			<div class="col-md-2 bg-dark text-white">
 				{{ render(controller('App\\Controller\\BarController:mainMenu',{
 					'routeName' : app.request.attributes.get('_route'),
@@ -25,6 +24,15 @@
 			</div>
 
 			<div class="col-md-10">
+				{% for label, messages in app.flashes %}
+					{% for message in messages %}
+						<div class="flash-{{ label }} alert alert-{{ label }} alert-dismissible m-3 shadow-sm" role="alert">
+							{{ message }}
+							<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+						</div>
+					{% endfor %}
+				{% endfor %}
+
 				<div class="container">
 					{% block body %}{% endblock %}
 				</div>
