remove useless comments

--- a/templates/bar/category.html.twig
+++ b/templates/bar/category.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BarController!
+{% block title %}Ouh un 'connoisseur' !
 {% endblock %}
 
 {% block body %}
