--- a/templates/bar/country.html.twig
+++ b/templates/bar/country.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BarController!
+{% block title %}La picole ça fait voyager !
 {% endblock %}
 
 {% block body %}
