--- a/templates/bar/index.html.twig
+++ b/templates/bar/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BarController!
+{% block title %}Hello les alcolos !
 {% endblock %}
 
 {% block body %}
