--- a/templates/bar/statistics.html.twig
+++ b/templates/bar/statistics.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BarController!
+{% block title %}Même les nerds ont droit à une bière
 {% endblock %}
 
 {% block body %}
